--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -110,16 +110,21 @@
         padding: 0;
         display: flex;
         flex-direction: column;
-        max-height: 674px;
+        min-height: 674px;
+        max-width: 400px;
+        min-width: 400px;
+
     }
 
     .expasionPanel-content img
     {
-        width: 350px;
-        height: 324px;
+        width: 100%;
+        height: auto;
         border-radius: 3px;
         box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
-        padding: 2px;
+        background-position: top 130px;
+        background-repeat: no-repeat;
+        transform: translateY(-80px);
     }
 
     .contact-items
