--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -118,13 +118,9 @@
 
     .expasionPanel-content img
     {
-        width: 100%;
-        height: auto;
-        border-radius: 3px;
+        width: 400px;
+        height: 280px;
         box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
-        background-position: top 130px;
-        background-repeat: no-repeat;
-        transform: translateY(-80px);
     }
 
     .contact-items
