--- a/src/components/Homepage/Homepage.css
+++ b/src/components/Homepage/Homepage.css
@@ -187,4 +187,9 @@
         padding-top: 1rem;
         padding-bottom: 7rem;
     }
+
+    .homepage-card-item-chart
+    {
+        width: 100%;
+    }
 }
